# hermes-desk

./: .gitignore  CONTEXT.md  HARDWARE.md  LICENSE  README.md  docker-compose.yml
bridge/: .env.example  Dockerfile  README.md  bridge.py  config.example.yaml  docker-compose.yml  hermes-bridge.service  requirements-test.txt  requirements.txt
bridge/config/: example.env
bridge/hermes_bridge/: __init__.py  audio.py  config.py  cron_templates.py  display.py  gateway.py  notification.py  notify_cli.py  pipeline.py  protocol.py  server.py  session.py  stt.py  tts.py
bridge/tests/: e2e_notify_live.py  test_audio.py  test_clients.py  test_config.py  test_cron_templates.py  test_display.py  test_notification.py  test_notify_cli.py  test_pipeline.py  test_protocol.py  test_server.py  test_session.py
docs/: PROTOCOL.md  README.md  gateway-integration.md  hardware-setup.md  network-requirements.md  systemd-deployment.md  troubleshooting.md
firmware/: .gitignore  CMakeLists.txt  README.md  build_and_flash.sh  idf_component.yml  partitions.csv  sdkconfig.defaults
firmware/components/hermes_audio/: CMakeLists.txt  idf_component.yml
firmware/components/hermes_audio/include/: hermes_audio.h
firmware/components/hermes_audio/src/: hermes_audio.c
firmware/components/hermes_display/: CMakeLists.txt  idf_component.yml
firmware/components/hermes_display/include/: hermes_display.h
firmware/components/hermes_display/src/: hermes_display.c
firmware/components/hermes_ws/: CMakeLists.txt  idf_component.yml
firmware/components/hermes_ws/include/: hermes_ws.h
firmware/components/hermes_ws/src/: hermes_ws.c
firmware/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml
firmware/main/include/: app_state.h  protocol.h  ptt.h  wifi_connect.h
firmware/main/src/: app_state.c  main.c  ptt.c  wifi_connect.c
firmware/tests/: .gitignore  firmware_syntax_check.py
firmware/wifi_c6_fw/: .gitkeep
